# Biotools

./: .gitignore  README.md  environment.yml  main.go  main.nf  setup.cfg
SNPvisual/: 230705_ASFV APQA.alignment.variation2.xlsx  230711_ASFV APQA.alignment.variation2.xlsx  230720_ASFV APQA.alignment.variation2.xlsx  README.md  Sample-HRM-p50-genotyping.csv  snpforRefseq.py  snpvisualization.py
SNPvisualtemp/: LAO234 Supplementary Table.xlsx  LAO234_variant table_refseq.xlsx  snpvisualization.py  sns.py
Translation_compare/: go.mod  main.go
bmrc/configs/: bmrc_cfhappy-template.sh  bmrc_pipeline-coi.ini  bmrc_pipeline.ini  bmrc_scripts.ini  bmrc_universal-template.sh
configs/: bmrc_pipeline.ini  bmrc_scripts.ini  default.ini  guppy-hac-se.ini  known_mutations.csv
environments/: coi.yml  run.yml
experiments/: .gitignore
experiments/0000-00-00_example/: README.md
make5table/: make5table.go
notebooks/: 2022-06-03_effect-of-parasitemia.ipynb  2022-12-09_exploring-hrp-16plex.ipynb  fig1_long-reads-summary-stats-8plex-16plex.ipynb  fig1_long-reads-summary-stats-v3.ipynb  fig1_visualise-reads.py  fig2_sequence-efficiency-sankey-v2.ipynb  fig2_sequencing-efficiency-sankey.ipynb
resources/: .gitignore
scripts/: create_illumina-ont_mapping.py  fig1_long-reads-diagram.py  fig3_aggregate-expt-metadata.py  fig4_cfhappy-summary-aggregation.py  fig4_cfhappy-vcf-aggregation.py  fig4_check-downsample-results.py  fig4_gene-fpr-fnr-diagram.py  merge_happy_results.py  run_create-downamples.py  run_experiment-merge.py
slurm/: gen_slurm-submission-pipeline.py  gen_slurm-submission.py
slurm/templates/: nomadic-submit.sh  sbatch-pipeline.sh
src/bash/: run_guppy-barcode.sh  run_guppy-basecall.sh
src/nomadic/lib/: dirs.py  (+11 more)
(+88 files in other folders)
