[metadata]
name = nomadic
description = Long-read analysis of P.falciparum data for NOMADS
author = Jason Hendry
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    nomadic
install_requires =
    pysam
	scipy
	seaborn
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
	nomadic_map = nomadic.pipeline.mapping:main
	nomadic_remap = nomadic.pipeline.mapping_hs:main
	nomadic_qcbams = nomadic.pipeline.qc_bams:main
	nomadic_submit = nomadic.pipeline.submit:main

[flake8]
max-line-length = 88
