[metadata]
name = nomadic
description = Analyse long reads from Plasmodium falciparum malaria 
author = Jason A. Hendry
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    nomadic
install_requires =
    pysam
	scipy
	seaborn
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
	nomadic = nomadic.pipeline.cli:cli
    truthset = nomadic.truthset.cli:cli

[flake8]
max-line-length = 88
